--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -6,12 +6,12 @@
 
 <div class="portrait-wrapper">
   <a
-    {% if page.slug != member.slug %}
-      href="{{ member.url | relative_url }}"
+    {% if member.link.homepage %}
+      href="{{ member.link.homepage }}"
     {% endif %}
     class="portrait"
     data-style="{{ include.style }}"
-    aria-label="{{ member.name | default: "member link" }}"
+    aria-label="{{ member.name | default: 'member link' }}"
   >
     <img
       src="{{ member.image | relative_url }}"
@@ -21,7 +21,7 @@
       {% include fallback.html %}
     >
 
-    {% if member.name or member.role or member.description %}
+    {% if member.name or member.role or member.description or member.link %}
       <span class="portrait-text">
         {% if member.name %}
           <span class="portrait-name">
@@ -29,13 +29,27 @@
           </span>
         {% endif %}
 
-        {% if member.role or member.description %}
+        {% if member.role %}
           <span class="portrait-role">
             {% assign type = site.data.types[member.role] %}
-            {% include icon.html icon=type.icon %}
-            <span>{{ member.description | default: type.description }}</span>
+            <span>{{ type.description }}</span>
           </span>
         {% endif %}
+        
+        {% if member.link %}
+          <span>
+            <span class="portrait-email">
+              <span>{{ member.link.email }}</span>
+            </span>
+          </span>
+        {% endif %}
+
+        {% if member.description %}
+          <span class="portrait-description">
+            <span>{{ member.description }}</span>
+          </span>
+        {% endif %}
+
       </span>
     {% endif %}
   </a>
