--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -7,6 +7,7 @@ $wrap: 800px;
 .citation {
   display: flex;
   margin: 15px 0;
+  padding: 0 20px;
   border-radius: var(--rounded);
   background: var(--background);
   overflow: hidden;
