update member field

--- a/_includes/list.html
+++ b/_includes/list.html
@@ -33,6 +33,7 @@
       description=d.description
       excerpt=d.excerpt
       height=d.height
+      homepage=d.homepage
       icon=d.icon
       id=d.id
       image=d.image
