update courses page

--- a/_includes/list.html
+++ b/_includes/list.html
@@ -44,6 +44,7 @@
       publisher=d.publisher
       repo=d.repo
       role=d.role
+      semester=d.semester
       slug=d.slug
       style=style
       subtitle=d.subtitle
@@ -53,6 +54,7 @@
       tooltip=d.tooltip
       type=d.type
       url=d.url
+      website=d.website
       width=d.width
     %}
   {% endfor %}
