--- a/_includes/post-excerpt.html
+++ b/_includes/post-excerpt.html
@@ -7,14 +7,11 @@
 <div class="post-excerpt">
   {% assign url = post.url %}
   {% assign title = post.title %}
-  <a href="{{ url | relative_url }}">{{ title }}</a>
+  <a href="{{ post.website }}">{{ title }}</a>
 
   {%
     include post-info.html
-    author=post.author
-    published=post.date
-    updated=post.last_modified_at
-    tags=post.tags
+    semester=post.semester
   %}
 
   {% assign excerpt = post.content
