--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -7,29 +7,29 @@
     {% if member %}
       {% include portrait.html lookup=include.author style="tiny" %}
     {% else %}
-      <span data-tooltip="Author">
+      <span>
         {% include icon.html icon="fa-solid fa-feather-pointed" %}
         <span>{{ include.author }}</span>
       </span>
     {% endif %}
   {% endif %}
 
-  {% assign published = include.published | date: "%B %d, %Y" %}
-  {% assign updated = include.updated | date: "%B %d, %Y" %}
+  <!-- {% assign published = include.published | date: "%B %d, %Y" %}
+  {% assign updated = include.updated | date: "%B %d, %Y" %} -->
 
-  {% if published %}
-    <span data-tooltip="Originally published on">
+  {% if include.semester %}
+    <span>
       {% include icon.html icon="fa-regular fa-calendar" %}
-      <span>{{ published }}</span>
+      <span>{{ include.semester }}</span>
     </span>
   {% endif %}
 
-  {% if updated and updated != "" and updated != published %}
+  <!-- {% if updated and updated != "" and updated != published %}
     <span data-tooltip="Last updated on">
       {% include icon.html icon="fa-solid fa-clock-rotate-left" %}
       <span>{{ updated }}</span>
     </span>
-  {% endif %}
+  {% endif %} -->
 </div>
 
 {% if include.tags %}
