--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- individual post page -->
 
 <h1 class="center">{{ page.title }}</h1>
 
@@ -8,9 +9,7 @@ layout: default
   include post-info.html
   author=page.author
   member=page.member
-  published=page.date
-  updated=page.last_modified_at
-  tags=page.tags
+  semester=page.semester
 %}
 
 {% include section.html %}
