--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,6 @@
 <div class="home-main">
     <img
+        width="55%"
         src="{{'images/home/groupphoto.jpg'| relative_url}}"
         class="home-image"
     />
