--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -12,7 +12,7 @@
 {% for style in styles %}
   {% unless style.url contains ".map" %}
     <link
-      href="{{ style.path | replace: ".scss", ".css" | relative_url }}"
+      href="{{ style.path | replace: '.scss', '.css' | relative_url }}"
       rel="stylesheet"
     />
   {% endunless %}
