--- a/_includes/card.html
+++ b/_includes/card.html
@@ -4,12 +4,12 @@
     {% if include.link %}
       href="{{ include.link | relative_url }}"
     {% endif %}
-    aria-label="{{ include.title | default: "card link" }}"
+    aria-label="{{ include.title | default: 'card link' }}"
     class="card-image"
   >
     <img
       src="{{ include.image | relative_url }}"
-      alt="{{ include.title | default: "card image" }}"
+      alt="{{ include.title | default: 'card image' }}"
       loading="lazy"
       {% include fallback.html %}
     >
