--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -12,11 +12,11 @@
         href="{{ citation.link | relative_url }}"
       {% endif %}
       class="citation-image"
-      aria-label="{{ citation.title | default: "citation link" }}"
+      aria-label="{{ citation.title | default: 'citation link' }}"
     >
       <img
         src="{{ citation.image | relative_url }}"
-        alt="{{ citation.title | default: "citation image" }}"
+        alt="{{ citation.title | default: 'citation image' }}"
         loading="lazy"
         {% include fallback.html %}
       >
