--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -4,15 +4,15 @@
       href="{{ include.link | relative_url }}"
     {% endif %}
     class="figure-image"
-    aria-label="{{ include.caption | default: "figure link" }}"
+    aria-label="{{ include.caption | default: 'figure link' }}"
   >
     <img
       src="{{ include.image | relative_url }}"
       style="
-        width: {{ include.width | default: "auto" }};
-        max-height: {{ include.height | default: "unset" }};
+        width: {{ include.width | default: auto" }};
+        max-height: {{ include.height | default: 'unset' }};
       "
-      alt="{{ include.caption | default: "figure image" }}"
+      alt="{{ include.caption | default: 'figure image' }}"
       loading="lazy"
       {% include fallback.html %}
     >
