--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -18,7 +18,7 @@
 
 {% assign subtitle = site.subtitle %}
 
-<!-- {% assign description = page.description | default: site.description %} -->
+{% assign description = page.description | default: site.description %}
 {% if site.subtitle %}
   {% capture description -%}
     {{ site.subtitle }}. {{ description }}
