add lab introduction

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
     {% for page in pages %}
       {% if page.title == "Home" %}
         <a
-        href="{{ site.url }}"
+        href="{{ '/' | relative_url }}"
         data-tooltip="{{ page.nav.tooltip }}"
         >
           {{ page.title }}
