--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,10 +26,9 @@
   <div>
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
-    &nbsp; | &nbsp; Built with
-    <a href="https://github.com/greenelab/lab-website-template">
-      Lab Website Template
-    </a>
+    &nbsp; | 
+    <br/> 
+    {{ site.description }}
   </div>
 
   <input
