--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -50,16 +50,16 @@
 
 <meta property="og:title" content="{{ title }}">
 <meta property="og:site_title" content="{{ site.title }}">
-<meta property="og:description" content="{{ description }}">
+<!-- <meta property="og:description" content="{{ description }}"> -->
 <meta property="og:url" content="{{ url }}">
-<meta property="og:image" content="{{ share }}">
+<!-- <meta property="og:image" content="{{ share }}"> -->
 <meta property="og:locale" content="en_US">
 
 <meta property="twitter:title" content="{{ title }}">
-<meta property="twitter:description" content="{{ description }}">
+<!-- <meta property="twitter:description" content="{{ description }}"> -->
 <meta property="twitter:url" content="{{ url }}">
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:image" content="{{ share }}">
+<!-- <meta property="twitter:image" content="{{ share }}"> -->
 
 {% if page.author %}
   <meta name="author" content="{{ page.author }}">
