update group photo

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,10 +1,17 @@
 <div class="home-main">
     <br/>
+    <div style="display: flex; flex-direction: row; gap: 30px">
     <img
-        width="55%"
-        src="{{'images/home/groupphoto.jpg'| relative_url}}"
+        width="50%"
+        src="{{'images/home/groupphoto2024spring.jpg'| relative_url}}"
         class="home-image"
     />
+    <img
+        width="50%"
+        src="{{'images/home/groupphoto2024summer.jpg'| relative_url}}"
+        class="home-image"
+    />
+    </div>
 </div>
 <br/>
 <h1> Recent News </h1>
