--- a/_includes/home.html
+++ b/_includes/home.html
@@ -16,10 +16,14 @@
 <br/>
 <h1> Recent News </h1>
 <h2>CSTL Recruiting MS students for Spring 2025</h2>
-The Collaborative Social Technologies Lab is recruiting two MS students for spring 2025. Ideal candidates will have experience and interest with HCI and AI. 
-If you are an interested candidate, please email Professor Seering by <b>October 23rd, 2024</b> at <u>seering@kaist.ac.kr</u> with the following information:
-<li>A copy of your CV, transcript, and MS application package.</li>
-<li>Any courses you are currently taking that are not listed on your transcript.</li>
-<li>Your current plans for what you want to do after you finish your masters.</li>
-<li>A one page statement of purpose (in English) detailing your research interests and relevant experience.</li>
-Application materials will be reviewed promptly, and interviews will be scheduled during the following week. Notifications will be sent out during the first week of November.
+The Collaborative Social Technologies Lab(CSTL) led by Professor Joseph Seering is recruiting interns for Winter 2025. 
+We have six (6) projects listed in <a href="https://docs.google.com/document/d/1wdzzO0XKH0o6326K-iUjbrSsKovst1LeLiOOIYfDZlk/edit?usp=sharing">this document</a>.
+The expected commitment for a winter internship position is approximately 40 hours per week, and the positions are paid accordingly.
+
+The deadline for applications is <b>11:59PM KST on Nov 4th (Mon)</b>. 
+In order to apply, <b>please fill out the <a href="https://forms.gle/NTVZH23gTZR1V39K9">this form</a> (in English).</b>
+
+Please note that all lab business is currently handled in English, so applicants should be prepared to communicate in English for all research-related activities.
+
+Application review will begin immediately once the deadline has passed, and candidates who will be interviewed will be contacted within the following week.
+Thank you.
