--- a/_includes/list.html
+++ b/_includes/list.html
@@ -12,7 +12,7 @@
 %}
 
 {% for year in years %}
-  {% assign data = year.items %}
+  {% assign data = year.items | sort: "date" | reverse %}
 
   {% if years.size > 1 %}
     {{--}}<h3 id="{{ year.name }}">{{ year.name }}</h3>
