revise recent news

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,7 +15,7 @@
 </div>
 <br/>
 <h1> Recent News </h1>
-<h2>CSTL Recruiting MS students for Spring 2025</h2>
+<h2>Call for Applications – Undergraduate Research Assistants, Winter 2025</h2>
 The Collaborative Social Technologies Lab(CSTL) led by Professor Joseph Seering is recruiting interns for Winter 2025. 
 We have six (6) projects listed in <a href="https://docs.google.com/document/d/1wdzzO0XKH0o6326K-iUjbrSsKovst1LeLiOOIYfDZlk/edit?usp=sharing">this document</a>.
 The expected commitment for a winter internship position is approximately 40 hours per week, and the positions are paid accordingly.
