--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -31,6 +31,7 @@
   --code: "Roboto Mono", monospace;
 
   // font sizes
+  --small: 0.8rem;
   --medium: 1rem;
   --large: 1.2rem;
   --xl: 1.4rem;
