add 2025 spring ra recruitment

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,13 +15,13 @@
 </div>
 <br/>
 <h1> Recent News </h1>
-<h2>Call for Applications – Undergraduate Research Assistants, Winter 2025</h2>
-The Collaborative Social Technologies Lab(CSTL) led by Professor Joseph Seering is recruiting interns for Winter 2025. 
-We have six (6) projects listed in <a href="https://docs.google.com/document/d/1wdzzO0XKH0o6326K-iUjbrSsKovst1LeLiOOIYfDZlk/edit?usp=sharing">this document</a>.
-The expected commitment for a winter internship position is approximately 40 hours per week, and the positions are paid accordingly.
+<h2>Call for Applications – Undergraduate Research Assistants, Spring 2025</h2>
 
-The deadline for applications is <b>11:59PM KST on Nov 4th (Mon)</b>. 
-In order to apply, <b>please fill out the <a href="https://forms.gle/NTVZH23gTZR1V39K9">this form</a> (in English).</b>
+The Collaborative Social Technologies Lab(CSTL) led by Professor Joseph Seering is recruiting interns for Spring 2025. 
+The detailed project description is written in <a href=" https://docs.google.com/document/d/1Itfjf8lc7qjcvSBxhC5ZRgrmfHfILesUQ6olWtiT8vs/edit?usp=sharing">this document</a>.
+
+The deadline for applications is <b>11:59PM KST on Feb 16th (Sun)</b>. 
+In order to apply, <b>please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSd92Xg5V0Gngf9R-H9HOI5FKIclhxLExUMiPosteL9EdKjXjA/viewform?usp=sharing">this form</a> (in English).</b>
 
 Please note that all lab business is currently handled in English, so applicants should be prepared to communicate in English for all research-related activities.
 
