revise yaml file

--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -4,7 +4,7 @@
   | first
   | default: include
 %}
-{% assign lab_members = site.data.members %}
+{% assign lab_members = site.data.authors %}
 
 <div class="citation">
   {% if include.style == "rich" %}
