update group photo & fix typo

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,7 +3,7 @@
     <div style="display: flex; flex-direction: row; gap: 30px">
     <img
         width="50%"
-        src="{{'images/home/groupphoto2024spring.jpg'| relative_url}}"
+        src="{{'images/home/groupphoto2025winter.png'| relative_url}}"
         class="home-image"
     />
     <img
