Updated main photo

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -8,7 +8,7 @@
     />
     <img
         width="50%"
-        src="{{'images/home/groupphoto2024summer.jpg'| relative_url}}"
+        src="{{'images/home/groupphoto2025summer.jpeg'| relative_url}}"
         class="home-image"
     />
     </div>
