Update internship call

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,31 +1,35 @@
 <div class="home-main">
-    <br/>
-    <div style="display: flex; flex-direction: row; gap: 30px">
+  <br />
+  <div style="display: flex; flex-direction: row; gap: 30px">
     <img
-        width="50%"
-        src="{{'images/home/groupphoto2025winter.png'| relative_url}}"
-        class="home-image"
+      width="50%"
+      src="{{'images/home/groupphoto2025winter.png'| relative_url}}"
+      class="home-image"
     />
     <img
-        width="50%"
-        src="{{'images/home/groupphoto2025summer.jpeg'| relative_url}}"
-        class="home-image"
+      width="50%"
+      src="{{'images/home/groupphoto2025summer.jpeg'| relative_url}}"
+      class="home-image"
     />
-    </div>
+  </div>
 </div>
-<br/>
-<h1> Recent News </h1>
-<h2>Recruiting MS students for Fall 2025</h2>
+<br />
+<h1>Recent News</h1>
+<h2>Call for Applications – Undergraduate Research Assistants, Fall 2025</h2>
 
-The Collaborative Social Technologies Lab (CSTL) is recruiting one MS student for fall 2025 from those already admitted to the School of Computing MS program. Ideal candidates will have experience and interest with HCI and AI.
-
-If you are an interested candidate, please email Professor Seering by <b>June 30th, 2025</b> at <a href="mailto:seering@kaist.ac.kr">seering@kaist.ac.kr</a> with the following information:
-
-<ul>
-  <li>A copy of your CV, transcript, and MS application package.</li>
-  <li>Any courses you are currently taking that are not listed on your transcript.</li>
-  <li>Your current plans for what you want to do after you finish your masters.</li>
-  <li>A one page statement of purpose (in English) detailing your research interests and relevant experience.</li>
-</ul>
-
-Application materials will be reviewed promptly, and interviews will be scheduled during the following week. Notifications will be sent out by July 12th.
+We are looking for a few undergraduate research interns to join CSTL this fall.
+The project description is written in
+<a
+  target="_blank"
+  ref="https://docs.google.com/document/d/1SnuKXNxR7PT9pN99gel77Dh-MEp-hqU70xCt0qo6Kuc/edit?usp=sharing"
+  >this document</a
+>. The deadline for applications is <b>11:59PM KST on Aug 10th (Sun)</b>. In
+order to apply, please fill out the following form (in English):
+<a
+  target="_blank"
+  ref="https://docs.google.com/forms/d/e/1FAIpQLSdX7miSEofzlcHoeLCWt2ysFZjkPuF_UmSO4VnSP0hloDC3FA/viewform?usp=dialog"
+  >Application Form</a
+>.<br />
+Please note that all lab business is currently handled in English, so applicants
+should be prepared to communicate in English for all research-related
+activities.
