home news to markdown

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,18 +18,12 @@
 <h2>Call for Applications – Undergraduate Research Assistants, Fall 2025</h2>
 
 We are looking for a few undergraduate research interns to join CSTL this fall.
-The project description is written in
-<a
-  target="_blank"
-  ref="https://docs.google.com/document/d/1SnuKXNxR7PT9pN99gel77Dh-MEp-hqU70xCt0qo6Kuc/edit?usp=sharing"
-  >this document</a
->. The deadline for applications is <b>11:59PM KST on Aug 10th (Sun)</b>. In
-order to apply, please fill out the following form (in English):
-<a
-  target="_blank"
-  ref="https://docs.google.com/forms/d/e/1FAIpQLSdX7miSEofzlcHoeLCWt2ysFZjkPuF_UmSO4VnSP0hloDC3FA/viewform?usp=dialog"
-  >Application Form</a
->.<br />
+The project description is written in [this document](https://docs.google.com/document/d/1SnuKXNxR7PT9pN99gel77Dh-MEp-hqU70xCt0qo6Kuc/edit?usp=sharing).
+
+The deadline for applications is **11:59PM KST on Aug 10th (Sun)**.
+In order to apply, please fill out the following form (in English):
+[Application Form](https://docs.google.com/forms/d/e/1FAIpQLSdX7miSEofzlcHoeLCWt2ysFZjkPuF_UmSO4VnSP0hloDC3FA/viewform?usp=dialog).
+
 Please note that all lab business is currently handled in English, so applicants
 should be prepared to communicate in English for all research-related
 activities.
