--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -62,6 +62,10 @@ layout: default
     margin: 0 auto;
     padding: 2rem 1rem;
   }
+  .hero {
+    background-color: white;
+    border-radius: 16px;
+  }
   .hero img {
     max-width: 100%;
     border-radius: 12px;
