Updated member profiles and organization order

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,12 +3,12 @@
   <div style="display: flex; flex-direction: row; gap: 30px">
     <img
       width="50%"
-      src="{{'images/home/groupphoto2025winter.png'| relative_url}}"
+      src="{{'images/home/groupphoto2025winter.jpg'| relative_url}}"
       class="home-image"
     />
     <img
       width="50%"
-      src="{{'images/home/groupphoto2025summer.jpeg'| relative_url}}"
+      src="{{'images/home/groupphoto2025summer.jpg'| relative_url}}"
       class="home-image"
     />
   </div>
