--- a/_includes/list.html
+++ b/_includes/list.html
@@ -8,7 +8,7 @@
 {% assign years = data
   | group_by_exp: "d", "d.date | date: '%Y'"
   | sort: "name"
-  | reverse
+  | first
 %}
 
 {% for year in years %}
