--- a/_includes/portrait-list.html
+++ b/_includes/portrait-list.html
@@ -1,6 +1,6 @@
 {% assign member = site.members 
     | where_exp: "member", "member.slug == include.lookup"
-    | reverse
+    | first
     | default: include
   %}
   
