Testing member order

--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -2,6 +2,7 @@
   | where_exp: "member", "member.slug == include.lookup"
   | first
   | default: include
+  | reverse
 %}
 
 <div class="portrait-wrapper">
