--- a/_includes/list.html
+++ b/_includes/list.html
@@ -5,60 +5,77 @@
   | data_filter: include.filters
 %}
 
-{% assign years = data
-  | group_by_exp: "d", "d.date | date: '%Y'"
-  | sort: "name"
-  | reverse
-%}
 
-{% for year in years %}
-  {% assign data = year.items | sort: "date" | reverse %}
-
-  {% if years.size > 1 %}
-    {{--}}<h3 id="{{ year.name }}">{{ year.name }}</h3>
-    {% assign data = data | sort: "date" | reverse %}
-  {% endif %}
-
-  {% for d in data %}
-    {% assign style = d.style | default: include.style %}
-
-    {%
-      include {{ include.component | append: ".html" }}
-      affiliation=d.affiliation
-      author=d.author
-      authors=d.authors
-      buttons=d.buttons
-      caption=d.caption
-      content=d.content
-      date=d.date
-      description=d.description
-      excerpt=d.excerpt
-      height=d.height
-      homepage=d.homepage
-      icon=d.icon
-      id=d.id
-      image=d.image
-      last_modified_at=d.last_modified_at
-      link=d.link
-      lookup=d.lookup
+{% if include.data == "members" %}
+  {% assign groups = data | sort: "name" %}
+  {% for d in groups %}
+    {% include {{ include.component | append: ".html" }}
+      lookup=d.slug
       name=d.name
-      publisher=d.publisher
-      repo=d.repo
+      affiliation=d.affiliation
+      homepage=d.homepage
       role=d.role
-      semester=d.semester
-      slug=d.slug
-      status=d.status
-      style=style
-      subtitle=d.subtitle
-      tags=d.tags
       term=d.term
-      text=d.text
-      title=d.title
-      tooltip=d.tooltip
-      type=d.type
-      url=d.url
-      website=d.website
-      width=d.width
+      description=d.description
+      image=d.image
     %}
   {% endfor %}
-{% endfor %}
+{% else %}
+  {% assign years = data
+    | group_by_exp: "d", "d.date | date: '%Y'"
+    | sort: "name"
+    | reverse
+  %}
+
+  {% for year in years %}
+    {% assign data = year.items | sort: "date" | reverse %}
+
+    {% if years.size > 1 %}
+      {{--}}<h3 id="{{ year.name }}">{{ year.name }}</h3>
+      {% assign data = data | sort: "date" | reverse %}
+    {% endif %}
+
+    {% for d in data %}
+      {% assign style = d.style | default: include.style %}
+
+      {%
+        include {{ include.component | append: ".html" }}
+        affiliation=d.affiliation
+        author=d.author
+        authors=d.authors
+        buttons=d.buttons
+        caption=d.caption
+        content=d.content
+        date=d.date
+        description=d.description
+        excerpt=d.excerpt
+        height=d.height
+        homepage=d.homepage
+        icon=d.icon
+        id=d.id
+        image=d.image
+        last_modified_at=d.last_modified_at
+        link=d.link
+        lookup=d.lookup
+        name=d.name
+        publisher=d.publisher
+        repo=d.repo
+        role=d.role
+        semester=d.semester
+        slug=d.slug
+        status=d.status
+        style=style
+        subtitle=d.subtitle
+        tags=d.tags
+        term=d.term
+        text=d.text
+        title=d.title
+        tooltip=d.tooltip
+        type=d.type
+        url=d.url
+        website=d.website
+        width=d.width
+      %}
+    {% endfor %}
+  {% endfor %}
+{% endif %}
