--- a/_includes/news-item.html
+++ b/_includes/news-item.html
@@ -12,6 +12,9 @@
   {%
     include post-info.html
     semester=news.semester
+    author=news.author
+    date=news.date
+    updated=news.updated
   %}
 
   {% assign excerpt = news.content
