--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -1,26 +1,34 @@
 <div class="post-info">
   {% if include.author %}
-    {% assign member = site.members
-      | where_exp: "member", "member.slug == include.author"
-      | first
+    {% assign authors = include.author
+      | join: ","
+      | downcase
+      | split: ","
+      | array_filter
     %}
-    {% if member %}
-      {% include portrait.html lookup=include.author style="tiny" %}
-    {% else %}
-      <span>
-        {% include icon.html icon="fa-solid fa-feather-pointed" %}
-        <span>{{ include.author }}</span>
-      </span>
-    {% endif %}
+    {% for author in authors %}
+      {% assign member = site.members
+        | where_exp: "member", "member.slug == author"
+        | first
+      %}
+      {% if member %}
+        {% include portrait.html lookup=author style="tiny" %}
+      {% else %}
+        <span data-tooltip="Author">
+          {% include icon.html icon="fa-solid fa-feather-pointed" %}
+          <span>{{ author }}</span>
+        </span>
+      {% endif %}
+    {% endfor %}
   {% endif %}
 
   {% assign published = include.published | date: "%B %d, %Y" %}
   {% assign updated = include.updated | date: "%B %d, %Y" %}
 
-  {% if include.date %}
-    <span>
+  {% if published %}
+    <span data-tooltip="Originally published on">
       {% include icon.html icon="fa-regular fa-calendar" %}
-      <span>{{ include.date }}</span>
+      <span>{{ published }}</span>
     </span>
   {% endif %}
 
