--- a/_includes/post-excerpt.html
+++ b/_includes/post-excerpt.html
@@ -12,6 +12,10 @@
   {%
     include post-info.html
     semester=post.semester
+    author=post.author
+    published=post.date
+    updated=post.last_modified_at
+    tags=post.tags
   %}
 
   {% assign excerpt = post.content
