--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,15 +15,16 @@
 </div>
 <br />
 <h1>Recent News</h1>
-<h2>Call for Applications – Undergraduate Research Assistants, Fall 2025</h2>
+<h2>Recruiting MS students for Spring 2026</h2>
 
-We are looking for a few undergraduate research interns to join CSTL this fall.
-The project description is written in [this document](https://docs.google.com/document/d/1SnuKXNxR7PT9pN99gel77Dh-MEp-hqU70xCt0qo6Kuc/edit?usp=sharing).
+The Collaborative Social Technologies Lab is recruiting MS students for spring 2026. Candidates must have already been admitted to the KAIST School of Computing for spring 2026. Ideal candidates will have experience and interest with HCI and AI. If you are an interested candidate, please email seering@kaist.ac.kr by <b>October 15th, 2025</b> with the following information:
 
-The deadline for applications is **11:59PM KST on Aug 10th (Sun)**.
-In order to apply, please fill out the following form (in English):
-[Application Form](https://docs.google.com/forms/d/e/1FAIpQLSdX7miSEofzlcHoeLCWt2ysFZjkPuF_UmSO4VnSP0hloDC3FA/viewform?usp=dialog).
+<ul>
+  <li>A copy of your CV, transcript, and MS application package.</li>
+  <li>Any courses you are currently taking that are not listed on your transcript.</li>
+  <li>Your current plans for what you want to do after you finish your masters.</li>
+  <li>A one page statement of purpose (in English) detailing your research interests and relevant experience.</li>
+</ul>
 
-Please note that all lab business is currently handled in English, so applicants
-should be prepared to communicate in English for all research-related
-activities.
+Application materials will be reviewed promptly, and interviews will be scheduled during the following week. Notifications will be sent out by <b>October 29th</b>.
+
