Winter 2026 internship call update

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,16 +15,15 @@
 </div>
 <br />
 <h1>Recent News</h1>
-<h2>Recruiting MS students for Spring 2026</h2>
+<h2>Call for Applications – Undergraduate Research Assistants, Winter 2026</h2>
 
-The Collaborative Social Technologies Lab is recruiting MS students for spring 2026. Candidates must have already been admitted to the KAIST School of Computing for spring 2026. Ideal candidates will have experience and interest with HCI and AI. If you are an interested candidate, please email <a href="mailto:seering@kaist.ac.kr">seering@kaist.ac.kr</a> by <b>October 15th, 2025</b> with the following information:
+We are recruiting interns for Winter 2026. The details of the project is written in <a href="https://docs.google.com/document/d/1tVV-UXqryUxNM3kLPidNiNQOo2DT26Q8Yxw6ePAhoK8/edit?usp=sharing">this document</a>. The deadline for applications is <b>11:59PM KST on Nov 3rd (Mon)</b>.
 
-<ul>
-  <li>A copy of your CV, transcript, and MS application package.</li>
-  <li>Any courses you are currently taking that are not listed on your transcript.</li>
-  <li>Your current plans for what you want to do after you finish your masters.</li>
-  <li>A one page statement of purpose (in English) detailing your research interests and relevant experience.</li>
-</ul>
+In order to apply, please fill out the <a href="https://forms.gle/4JHx49zafPApDVsh7">Application Form (in English)</a>. 
 
-Application materials will be reviewed promptly, and interviews will be scheduled during the following week. Notifications will be sent out by <b>October 29th</b>.
+The compensation for this position is 800,000 KRW per month for a total of two months.
+
+Please note that all lab business is currently handled in English, so applicants should be prepared to communicate in English for all research-related activities.
+
+Application review will begin immediately once the deadline has passed, and candidates who will be interviewed will be contacted within the following week.
 
