--- a/_styles/portrait.scss
+++ b/_styles/portrait.scss
@@ -22,8 +22,8 @@
 .portrait-small {
   position: relative;
   display: inline-flex;
-  // justify-content: center;
-  // align-items: center;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   gap: 20px;
   margin: 20px;
