--- a/_styles/portrait.scss
+++ b/_styles/portrait.scss
@@ -22,8 +22,8 @@
 .portrait-small {
   position: relative;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
   flex-direction: row;
   gap: 20px;
   margin: 20px;
@@ -110,4 +110,25 @@
 .portrait[data-style="small"] .portrait-role .icon {
   left: -2px;
   top: -2px;
+}
+
+/* Mobile Fixes (Screens smaller than 768px) */
+@media (max-width: 768px) {
+  
+  .portrait-small {
+    max-width: calc(100% - 40px); 
+    width: 100%;
+    margin: 10px 20px;
+  }
+
+  .portrait-small-image {
+    width: 60px; 
+    min-width: 60px;
+  }
+  
+  .portrait-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
