Updated Spring 2026 Intern call

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,13 +15,11 @@
 </div>
 <br />
 <h1>Recent News</h1>
-<h2>Call for Applications – Undergraduate Research Assistants, Winter 2026</h2>
+<h2>Call for Applications – Undergraduate Research Assistants, Spring 2026</h2>
 
-We are recruiting interns for Winter 2026. The details of the project is written in <a href="https://docs.google.com/document/d/1tVV-UXqryUxNM3kLPidNiNQOo2DT26Q8Yxw6ePAhoK8/edit?usp=sharing">this document</a>. The deadline for applications is <b>11:59PM KST on Nov 3rd (Mon)</b>.
+We are recruiting interns for Spring 2026. The details of the project is written in <a href="https://docs.google.com/document/d/1RM9iQ5RlO8x_JO__5ao2ll3pqFijYq2ifK9zyJKO0mk/edit?usp=sharing">this document</a>. The deadline for applications is <b>11:59PM KST on Feb 9th (Mon)</b>.
 
-In order to apply, please fill out the <a href="https://forms.gle/4JHx49zafPApDVsh7">Application Form (in English)</a>. 
-
-The compensation for this position is 800,000 KRW per month for a total of two months.
+In order to apply, please fill out the <a href="https://forms.gle/WCHdEtFyQY1FesmUA">Application Form (in English)</a>. 
 
 Please note that all lab business is currently handled in English, so applicants should be prepared to communicate in English for all research-related activities.
 
